[tool.poetry]
authors = ["Cristiano Piemontese <cristiano.piemontese@prima.it>"]
description = ""
name = "python-changelog"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
main = "python_changelog:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
